add user activation and email
